--- a/texts/about.html
+++ b/texts/about.html
@@ -1,61 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-
-    body {
-        font-family: 'Poppins', sans-serif;
-    }
-
-    .horizontal-line {
-        border: 1px solid orange;
-        width: 40px;
-    }
-
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 20px;
-    }
-
-    .image-container {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .box-container {
-        width: 100%;
-        height: 450px;
-        background-color: rgba(211, 211, 211, 0.2);
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-        justify-content: center;
-        padding: 10px;
-    }
-
-    .contact-container {
-        width: 100%;
-        padding: 10px;
-        background-color: rgba(211, 211, 211, 0.2);
-        border-radius: 5px;
-    }
-
-    .box-container p {
-        text-align: center;
-    }
-
-</style>
 <body>
 <div class="about-container">
     <div class="flex-container">
@@ -114,14 +64,13 @@
     <hr class="horizontal-line">
     <div class="contact-container">
         <div>
-            <p>E-mail:</p>
+            <p style="margin:0; padding: 0">E-mail:</p>
             <p style="font-weight:bold;">
                 pierre.edimo@houlala.store
             </p>
         </div>
-        <br/>
         <div>
-            <p>telephone:</p>
+            <p style="margin:0; padding: 0">telephone:</p>
             <p style="font-weight:bold;">
                 +237 6 97 59 04 70
             </p>
