--- a/texts/term.html
+++ b/texts/term.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-    body{
-        font-family: 'Poppins', sans-serif;
-
-    }
-</style>
 <body>
 <div>
     <p>Derniere mise a jour: February 05, 2023</p>
