--- a/texts/term.html
+++ b/texts/term.html
@@ -533,7 +533,7 @@
     <p>Notre service peut vous donner la possibilité de supprimer certaines informations vous
         concernant
         à
-        partir du service.</p>
+        partir du services.</p>
     <p>Vous pouvez mettre à jour, modifier ou supprimer vos informations à tout moment en vous
         connectant à
         votre compte, si vous en avez un.
